Design fix; Use Bootrap columns class to align well browse pages
On large screen resolutions, it wasnt displayed well

--- a/templates/themes/base/css/layout.css
+++ b/templates/themes/base/css/layout.css
@@ -200,12 +200,10 @@
 
 .box-left {
     float: left;
-    width: 200px;
 }
 
 .box-right {
     float: right;
-    width: 700px;
 }
 
 .icon-wrap i {
